# puregym-mcp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.html
puregym_mcp/: __init__.py
puregym_mcp/mcp/: auth.py  capabilities.py  cli.py  server.py  tools.py
puregym_mcp/puregym/: __init__.py  adapters.py  api_schemas.py  client.py  filters.py  models.py  schemas.py  service.py
tests/mcp/: test_auth.py  test_capabilities.py  test_cli.py  test_tools.py
tests/puregym/: test_api_schemas.py  test_client.py  test_models.py  test_schemas.py  test_service.py
tests/real_api/: conftest.py  test_bookings.py  test_centers.py  test_read_only.py  test_search_classes.py
