[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "puregym_mcp"
module-root = ""

[project]
name = "puregym-mcp"
version = "0.2.0"
description = "PureGym Python client and MCP server for class discovery and booking management"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Jorge Sintes Fernandez" },
]
keywords = ["puregym", "mcp", "model-context-protocol", "fitness", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "pydantic>=2.12.0",
]

[project.urls]
Homepage = "https://puregym-mcp.jorgesintes.dev"
Repository = "https://github.com/yorch/puregym-mcp"
Issues = "https://github.com/yorch/puregym-mcp/issues"
Changelog = "https://github.com/yorch/puregym-mcp/blob/main/CHANGELOG.md"

[project.scripts]
puregym-mcp = "puregym_mcp.mcp.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 110

[tool.pytest.ini_options]
addopts = ["-v"]
markers = [
    "real_api: marks tests that run against the real PureGym API (requires credentials)",
]
